####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libADM_toolkit.a

## INCLUDES were found outside kdevelop specific part

libADM_toolkit_a_METASOURCES = AUTO

libADM_toolkit_a_SOURCES = ADM_debug.cpp ADM_debug.h filesel.h TLK_filesel.cpp \
	toolkit.cpp toolkit.hxx toolkit_dialog.cpp toolkit_gtk.h toolkit_gtk_include.h \
	win32.cpp ADM_memsupport.cpp

EXTRA_DIST = 

####### kdevelop will overwrite this part!!! (end)############
INCLUDES= $(all_includes) $(GTK_CFLAGS)
noinst_HEADERS =  
