####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libADM_colorspace.a


libADM_colorspace_a_METASOURCES = AUTO

libADM_colorspace_a_SOURCES = yv12_rgb.cpp yv12_422p.cpp yv2bmp.cpp yuv.cpp rgb2yuv.cpp yv12rgb_altivec.cpp


EXTRA_DIST = colorspace.h yv12_422p.cpp yv12_rgb.cpp yv2bmp.cpp

####### kdevelop will overwrite this part!!! (end)############
INCLUDES = $(all_includes)  $(ALTIVEC_SWITCH)
