####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libADM_encoder.a

INCLUDES = $(all_includes)

libADM_encoder_a_METASOURCES = AUTO

libADM_encoder_a_SOURCES = adm_encConfig.cpp xvid_vbr.c adm_encxvid.cpp \
	adm_encoder.cpp adm_encmjpeg.cpp adm_encffmpeg.cpp adm_encdivx2p.cpp adm_encdivx.cpp \
	adm_encffmpeg1.cpp adm_encffmatrix.h adm_encXvid4.cpp adm_encx264.cpp


EXTRA_DIST = adm_encdivx.cpp adm_encdivx.h adm_encdivx2p.cpp adm_encffmpeg.cpp adm_encffmpeg.h adm_encmjpeg.cpp adm_encmjpeg.h adm_encoder.cpp adm_encoder.h adm_encxvid.cpp adm_encxvid.h xvid_vbr.c xvid_vbr.h adm_encConfig.cpp ADM_vidEncode.hxx adm_encConfig.h

####### kdevelop will overwrite this part!!! (end)############
noinst_HEADERS = adm_encXvid4.h adm_encx264.h
