####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libADM_library.a

INCLUDES = $(all_includes)

libADM_library_a_METASOURCES = AUTO

libADM_library_a_SOURCES = subchunk.cpp riffparser.cpp fourcc.cpp broken.cpp \
		aviio.cpp aviindexer.cpp aviframe.cpp avidemutils.cpp ADM_image.cpp \
	ADM_fileio.cpp ADM_print.cpp ADM_imageUtils.cpp


EXTRA_DIST = avidemutils.cpp aviframe.cpp aviindexer.cpp aviio.cpp avifmt2.h avifmt.h avio.hxx broken.cpp default.h fourcc.cpp fourcc.h indexer.hxx riffparser.cpp riffparser.h subchunk.cpp subchunk.h 

####### kdevelop will overwrite this part!!! (end)############
noinst_HEADERS = ADM_image.h ADM_fileio.h
